Fix static pages

--- a/public/about/author.html
+++ b/public/about/author.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <title>Об авторе проекта TestGuru</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -17,7 +17,7 @@
         </p>
     </div>
     <p>
-        <a href="https://github.com/Vason-err" target="_blank"> Профиль на github </a>
+        <a href="https://github.com/Vason-err" target="_blank" rel="nofollow" rel="noopener"> Профиль на github </a>
     </p>
 </div>
 </body>
